# sounddna

./: .gitignore  CMakeLists.txt  config.h
resources/web/: index.html
resources/web/css/: style.css
resources/web/js/: analyzerView.js  app.js  browserView.js  compareView.js  dnaAnalyzer.js  dnaBrowser.js  dnaCompare.js  dnaMap.js  dnaMorph.js  dnaTransfer.js  mapView.js  morphView.js  transferView.js  utils.js
scripts/: generate_ui_resource.py
src/: Geno_Params.h  Geno_Plugin.cpp  Geno_Plugin.h  SDNA_Params.h  SDNA_Plugin.cpp  SDNA_Plugin.h
src/DSP/: Geno_AirProcessor.cpp  Geno_AirProcessor.h  Geno_Analyzer.cpp  Geno_Analyzer.h  Geno_DynamicsProcessor.cpp  Geno_DynamicsProcessor.h  Geno_FFT.cpp  Geno_FFT.h  Geno_GlueProcessor.cpp  Geno_GlueProcessor.h  Geno_MorphEngine.cpp  Geno_MorphEngine.h  Geno_MovementProcessor.cpp  Geno_MovementProcessor.h  Geno_NoiseProcessor.cpp  Geno_NoiseProcessor.h  Geno_ResonanceProcessor.cpp  Geno_ResonanceProcessor.h  Geno_SpaceProcessor.cpp  Geno_SpaceProcessor.h  Geno_SpectralProcessor.cpp  Geno_SpectralProcessor.h  Geno_StereoProcessor.cpp  Geno_StereoProcessor.h  Geno_TextureProcessor.cpp  Geno_TextureProcessor.h  Geno_TransferEngine.cpp  Geno_TransferEngine.h  Geno_Types.cpp  Geno_Types.h  SDNA_AirProcessor.cpp  SDNA_AirProcessor.h  SDNA_Analyzer.cpp  SDNA_Analyzer.h  SDNA_DynamicsProcessor.cpp  SDNA_DynamicsProcessor.h  SDNA_FFT.cpp  SDNA_FFT.h  SDNA_GlueProcessor.cpp  SDNA_GlueProcessor.h  (+20 more)
src/linux/: IPlugPaths_linux.cpp  IPlugTimer_linux.cpp  IPlugWebView_linux.cpp  WebViewHelper.cpp
test/: Makefile  test_deep.cpp  test_dsp  test_dsp.cpp  test_edge.cpp  test_pipeline.cpp
